objects/Deviated_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Account_Extension_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension Name</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Deviated Costs</relationshipLabel>
        <relationshipName>Deviated_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deviated Costs</relationshipLabel>
        <relationshipName>My_Deals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Account_Name__r.Owner.FirstName &amp; &quot; &quot; &amp; Account_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Alerts__c</fullName>
        <formula>if( 
and( 
Exclude_from_Alerts__c = FALSE, End_Date__c&gt;=today() ,
End_Date__c - DATEVALUE(CreatedDate) &gt; 29), 
TRUE, 
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_User_Account_Owner__c</fullName>
        <formula>if(OR(Account_Name__r.IOWNACCOUNT__c = &apos;yes&apos;,$User.ProfileId = &apos;00eE0000000IGuL&apos;, $User.ProfileId = &apos;00eE0000000XX1I&apos;, $User.ProfileId = &apos;00eE0000000I0f7&apos;, $User.ProfileId = &apos;00eE0000000I0cr&apos;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User = Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_ID__c</fullName>
        <formula>Account_Name__r.Cust_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cust ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Comments__c</fullName>
        <label>Deal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Customer_Level__c</fullName>
        <label>Deal Customer Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Number</label>
        <referenceTo>Deviated_Cost_Header__c</referenceTo>
        <relationshipLabel>Deviated Costs</relationshipLabel>
        <relationshipName>Deviated_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Owner__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; Account_Name__r.Sales_PersonID__r.OwnerId, Account_Name__r.Sales_PersonID__r.User__r.FirstName &amp; &quot; &quot; &amp; Account_Name__r.Sales_PersonID__r.User__r.LastName, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <formula>if(Account_Name__c = &quot;&quot;, &quot;Unassigned&quot;, 

if(and(TODAY() &gt; End_Date__c, or(NOT(ISPICKVAL(Rep_Disposition__c, &quot;Extension Granted&quot;)), NOT(ISPICKVAL(Rep_Disposition__c, &quot;No Extension - Deal Ended&quot;)))), &quot;Expired&quot;,

if(and(End_Date__c - TODAY() &lt;= 90, or(NOT(ISPICKVAL(Rep_Disposition__c, &quot;Extension Granted&quot;)), NOT(ISPICKVAL(Rep_Disposition__c, &quot;No Extension - Deal Ended&quot;)))), &quot;Expiring&quot;, 

if(ISPICKVAL(Rep_Disposition__c, &quot;Deviated Cost Review&quot;), &quot;Under Review&quot;, 

if(ISPICKVAL(Rep_Disposition__c, &quot;Extension Granted&quot;), &quot;Won&quot;, 

if(ISPICKVAL(Rep_Disposition__c, &quot;No Extension - Deal Ended&quot;), &quot;Lost&quot;, 

if(ISPICKVAL(Won_Lost__c,&quot;Won&quot;), &quot;Won&quot;, 

if(ISPICKVAL(Won_Lost__c, &quot;Lost&quot;), &quot;Lost&quot;, 

&quot;Status Error&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deviated Paper Cost</fullName>
                </value>
                <value>
                    <fullName>HP Big Deal</fullName>
                </value>
                <value>
                    <fullName>HP Clawback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_Dupe__c</fullName>
        <formula>Deal_Number__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Deal_Number__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <label>End User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Alerts__c</fullName>
        <formula>Deal_Number__r.Exclude_from_Alerts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude from Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Row_Key__c</fullName>
        <formula>Deal_Number__r.Header_Row_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header Row Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linked_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Support</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linked_WRF_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked WRF Task</label>
        <referenceTo>WRF_Task__c</referenceTo>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Level_1__c</fullName>
        <formula>Account_Name__r.Parent.AOPS_Cust_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Level_2__c</fullName>
        <formula>Account_Name__r.Parent.Parent.AOPS_Cust_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Disposition__c</fullName>
        <inlineHelpText>For Field Use: please select the appropriate deal stage.</inlineHelpText>
        <label>Rep Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deviated Cost Review</fullName>
                </value>
                <value>
                    <fullName>Extension Granted</fullName>
                </value>
                <value>
                    <fullName>No Extension - Deal Ended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Person_ID__c</fullName>
        <formula>Account_Name__r.Sales_PersonID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Deal_Number__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Deal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Deal ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Rep__c</fullName>
        <formula>Deal_Number__r.Vendor_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <formula>Deal_Number__r.Vendor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <formula>Deal_Number__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Won_Lost__c</fullName>
        <label>Won/Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deviated Cost</label>
    <nameField>
        <displayFormat>DCID-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deviated Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rep_Disposition_Controller</fullName>
        <active>true</active>
        <description>Only Account Owner can edit Rep Disposition Field</description>
        <errorConditionFormula>Current_User_Account_Owner__c = FALSE</errorConditionFormula>
        <errorMessage>Only Account Owner can edit Rep Disposition!</errorMessage>
    </validationRules>
</CustomObject>